# talOS

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  MODULE.bazel  README.md  test.txt
.github/workflows/: continuous-integration.yaml
common/protocol/: BUILD  README.md  frame.cc  frame.h  frame_test.cc  motor.h  motor_state.h  network_util.h  sim_udp_smoke.cc  state.h  tcp.h  types.h  udp.cc  udp.h  udp_perf.cc  udp_test.cc
common/protocol/include/talos/protocol/: frame.h  runtime_udp.h
common/protocol/src/: frame.cc  runtime_udp.cc
common/protocol/test/: frame_test.cc  runtime_udp_test.cc
common/protocol/tools/: sim_udp_smoke.cc  udp_perf.cc
leg_robot/: BUILD  main.cc
robot/: build.gradle
robot/src/main/cpp/: MotorsSubsystem.cpp  Robot.cpp
robot/src/main/include/: Constants.h  Motor.h  MotorsSubsystem.h  Robot.h  SimMotor.h  Utils.h
talOS/: BUILD  socket.h  test.cc
talOS/configuration/: BUILD  README.md  config_parser.h  config_test.cc  configuration.h  robot.toml  subsystem.toml
talOS/ipc/: BUILD  README.md  concepts.h  ipc_test_message.fbs  publisher.h  publisher_process.cc  shared_memory.h  subscriber.h  subscriber_process.cc  test.cc
talOS/memory/: BUILD  ring_buffer.h  ring_buffer_test.cc  shared_memory_ptr.h  shared_memory_test.cc
talOS/messages/: BUILD  test.cc
talOS/rtms/: BUILD  README.md  main.cc  rtms.cc  rtms.h  test.cc  test_message.fbs
tools/: static_analysis.py
tools/subsystem_codegen/: BUILD  generator.py  main.py  model.py  parser.py  test.toml
vision/: BUILD  buffer.h  cpu_device.h  device.h  device_test.cc
